--- a/landingpage.html
+++ b/landingpage.html
@@ -32,7 +32,7 @@
 				<img src="assets/deliveryfront4.jpg" alt="" />
 				<div class="hero-text">
 					<h1>QUICK DELIVERY </h1><h1>WITH </h1><h1 class="green">DELIQUICK</h1>
-					<button type="button" class="btn_getStarted">let's Get Started</button>
+					<a href="login.html"><button type="button" class="btn_getStarted">let's Get Started</button></a>
 				</div>
 			</div>
 		</main>
