--- a/landingpage.html
+++ b/landingpage.html
@@ -26,6 +26,8 @@
 					<li><a href="login.html" class="btn_login">Login</a></li>
 				</ul>
 			</nav>
+
+			<div></div>
 		</header>
         <main>
 			<div class="hero">
