logout modal, profile modal

--- a/register.html
+++ b/register.html
@@ -19,10 +19,10 @@
             </div>
             <h3>Register</h3>
             <form action="login.html">
-              <input class="input" type="text" name="username" placeholder="Username" />
-              <input class="input" type="text" name="emailphone" placeholder="Email"/>
-              <input class="input" type="number" name="phone" placeholder="Phone Number" />
-              <input class="input" type="password" name="password" placeholder="Password" />
+              <input class="input" type="text" name="username" placeholder="Username" required/>
+              <input class="input" type="text" name="emailphone" placeholder="Email" required/>
+              <input class="input" type="number" name="phone" placeholder="Phone Number" required/>
+              <input class="input" type="password" name="password" placeholder="Password" required/>
               <button type="submit" class="btn_login" name="login" id="login">Register</button>
             </form>
 	  </div>
