--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -30,7 +30,7 @@
 				</a>
 			</li>
 			<li>
-				<a href="#">
+				<a href="#" id="logout">
 					<i class="bx bx-log-out"></i>
 					<span class="links_name">Log out</span>
 				</a>
@@ -42,7 +42,7 @@
 			<div class="sidebar-button">
 				<i class="bx bx-menu sidebarBtn"></i>
 			</div>
-			<div class="profile-details">
+			<div class="profile-details" id="profile">
                 <i class='bx bxs-user-circle'></i>
 				<span class="admin_name">Admin</span>
 			</div>
@@ -51,14 +51,77 @@
 			<h1>Dashboard</h1>
 		</div>
 	</section>
+	<!-- toast -->
 	<div id="snackbar">Selamat Datang Admin</div>
+	<!-- logout modal -->
+	<div id="logoutModal" class="modal">
+		<div class="modal-content">
+			<p>Are you sure you want to log out?</p>
+			<button id="confirmLogout" class="btn btn-primary">Yes</button>
+			<button id="cancelLogout" class="btn btn-secondary">No</button>
+		</div>
+	</div>
+	<!-- profile modal -->
+	<div id="profileModal" class="modal">
+		<div class="modal-content form-profile">
+		  <h2>My profile</h2>
+            <form action="index.html">
+            <input class="input" type="text" name="username" placeholder="admin" readonly/>
+            <input class="input" type="text" name="phone" placeholder="081123321123"/>
+            <button type="button" class="btn btn-secondary" id="closeProfileModal">Close</button>
+            </form>
+		</div>
+	  </div>
 
 	<script>
+	//toast
 	function helloToast() {
-	var x = document.getElementById("snackbar");
-	x.className = "show";
-	setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+		var x = document.getElementById("snackbar");
+		x.className = "show";
+		setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
 	}
+
+	//logout modal
+	document.getElementById("logout").addEventListener("click", showModal);
+	document.getElementById("confirmLogout").addEventListener("click", confirmLogout);
+	document.getElementById("cancelLogout").addEventListener("click", hideModal);
+
+	const modal = document.getElementById("logoutModal");
+
+	function showModal() {
+		document.getElementById("logoutModal").style.display = "block";
+	}
+
+	function confirmLogout() {
+		window.location.href = "../login.html";
+	}
+
+	function hideModal() {
+		document.getElementById("logoutModal").style.display = "none";
+	}
+
+	window.onclick = function(event) {
+		if (event.target == document.getElementById("logoutModal")) {
+			document.getElementById("logoutModal").style.display = "none";
+		}
+		if (event.target == document.getElementById("profileModal")) {
+			document.getElementById("profileModal").style.display = "none";
+		}
+	}
+
+	//profile modal
+	document.getElementById("profile").addEventListener("click", showProfileModal);
+	document.getElementById("closeProfileModal").addEventListener("click", hideProfileModal);
+
+	function showProfileModal() {
+		document.getElementById("profileModal").style.display = "block";
+	}
+
+	function hideProfileModal() {
+		document.getElementById("profileModal").style.display = "none";
+	}
+
+
 	</script>
 </body>
 
