--- a/login.html
+++ b/login.html
@@ -24,12 +24,12 @@
             </div>
             <h3>Login</h3>
             <form action="index.html">
-            <input class="input" type="text" name="username" placeholder="Email/Phone Number" />
-                <input class="input" type="password" name="password" placeholder="Password" />
+            <input class="input" type="text" name="username" placeholder="Email/Phone Number" required/>
+            <input class="input" type="password" name="password" placeholder="Password" required/>
             <button type="submit" class="btn_login" name="login" id="login">Login</button>
             </form>
             <a href="register.html" class="link-register">Register</a>
-            </div>
+      </div>
 	  </div>
 	</main>
    </div>
